--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,3 +38,6 @@ supervisor_unix_http_server_socket_path: /var/run/supervisor.sock
 
 supervisor_inet_http_server_enable: false
 supervisor_inet_http_server_port: '*:9001'
+
+supervisord_logfile: /var/log/supervisor/supervisord.log
+supervisord_pidfile: /var/run/supervisor/supervisord.pid
