fix the directory for supervisor pid
Summary: don't use /var/run/supervisor because it's going to be cleared every reboot

Test Plan: none

Reviewers: sdsdkkk, kucing_terbang, sendy, albertstevelino, kandito

Reviewed By: kandito

Differential Revision: https://p.cermati.com/D7154

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,7 +29,7 @@ supervisor_programs: []
 supervisor_nodaemon: false
 
 supervisor_log_dir: /var/log/supervisor
-supervisor_run_dir: /var/run/supervisor
+supervisor_run_dir: /var/run
 supervisor_user: root
 supervisor_password: 'my_secret_password'
 
