Add group support
Summary:
add program groups support, part of D10801.

Example:
On `athena-deployment/worker/vars/supervisor.yml`:
```
supervisor_groups:
  - name: application-processor
    state: present
    programs:
      - categorize-browser-history
      - categorize-installed-app
      - check-reference
```

Test Plan: manual

Reviewers: mroeha, oby, #team_infra

Reviewed By: mroeha

Differential Revision: https://p.cermati.com/D10808

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -9,6 +9,7 @@
   with_items:
     - "{{ supervisor_config_path }}"
     - "{{ supervisor_config_path }}/conf.d"
+    - "{{ supervisor_config_path }}/conf.d/groups"
 
 - name: Ensure Supervisor configuration is present.
   template:
@@ -27,4 +28,16 @@
     mode: 0644
   when: item.state|default('present') != 'absent'
   with_items: "{{ supervisor_programs }}"
+  notify: restart supervisor
+
+- name: Ensure Supervisor group configs are present.
+  template:
+    src: group.conf.j2
+    dest: "{{ supervisor_config_path }}/conf.d/groups/{{ item.name }}.conf"
+    force: yes
+    owner: root
+    group: root
+    mode: 0644
+  when: item.state|default('present') != 'absent'
+  with_items: "{{ supervisor_groups }}"
   notify: restart supervisor
