fix supervisor include directory path
Summary: fix supervisor include directory path

Test Plan: manual

Reviewers: mroeha

Reviewed By: mroeha

Differential Revision: https://p.cermati.com/D10809

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,15 @@ supervisor_programs: []
   #     killasgroup=true
   #     stopasgroup=true
 
+# A list of `groups`s Supervisor will control. Example commented out below.
+supervisor_groups: []
+  # - name: application-processor
+  #   state: present
+  #   programs:
+  #     - categorize-browser-history
+  #     - categorize-installed-app
+  #     - check-reference
+
 supervisor_nodaemon: false
 
 supervisor_log_dir: /var/log/supervisor
