Fix race condition when restarting Supervisord
Summary:
According to [issue #26](https://github.com/geerlingguy/ansible-role-supervisor/issues/26) on the upstream, there's a chance where the service stop command finished before supervisord daemon actually exited. Instead of going with sleep timer, this diff will make sure that the process is actually dead.

Also changed in this diff:
  - Fixed STOP and RELOAD command on systemd service file
  - Only restart the daemon when there's change on the systemd service file. Changes in the supervisord program/group configurations will only resulted in `supervisorctl update` which does not kill the daemon

Test Plan: manual

Reviewers: #devops, sdsdkkk

Reviewed By: #devops, sdsdkkk

Differential Revision: https://p.cermati.com/D17763

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,63 @@
 ---
-- name: restart supervisor
-  service: name=supervisord state=restarted
+- name: Reload supervisord config
+  command: "{{ supervisorctl_bin_path }} update"
   when: supervisor_started
+
+- name: Restart supervisord
+  debug: msg="Restart supervisord"
+  when: supervisor_started
+  changed_when: true
+  notify:
+    - Restart supervisord (service)
+    - Restart supervisord (systemd)
+
+
+# Restart method for non-systemd
+- name: Restart supervisord (service)
+  service:
+    name: supervisord
+    state: restarted
+  when: ansible_service_mgr != 'systemd'
+
+
+# Restart method chain for systemd
+- name: Restart supervisord (systemd)
+  debug: msg="Restart supervisord (systemd)"
+  when: ansible_service_mgr == 'systemd'
+  changed_when: true
+  notify:
+    - "Restart supervisord (systemd): Stop supervisord service via systemd"
+    - "Restart supervisord (systemd): Shutdown supervisord process"
+    - "Restart supervisord (systemd): Get supervisord PID"
+    - "Restart supervisord (systemd): Wait until supervisord is stopped"
+    - "Restart supervisord (systemd): Restart supervisord"
+
+# Using `command` is required to actually set the service's state to
+# `inactive`. Stopping with `service` module won't change the state of
+# `activating` service, which will make systemd start supervisord
+# immediately after "Wait until supervisord is stopped" if the service is
+# stuck on `activating` state.
+- name: "Restart supervisord (systemd): Stop supervisord service via systemd"
+  command: systemctl stop supervisord
+
+- name: "Restart supervisord (systemd): Shutdown supervisord process"
+  command: supervisorctl shutdown
+  ignore_errors: true   # Will crash if the process is already dead
+
+- name: "Restart supervisord (systemd): Get supervisord PID"
+  shell: ps aux | grep supervisord | grep -v grep | awk '{ printf $2 }'
+  register: supervisord_pid
+  ignore_errors: true   # Will crash if the process is already dead
+
+# Sometimes `supervisorctl shutdown` will exit even if the daemon is still
+# running
+- name: "Restart supervisord (systemd): Wait until supervisord is stopped"
+  wait_for:
+    path: "/proc/{{ supervisord_pid.stdout }}/status"
+    state: absent
+  when: supervisord_pid.rc == 0 and supervisord_pid.stdout != ''
+
+- name: "Restart supervisord (systemd): Restart supervisord"
+  service:
+    name: supervisord
+    state: restarted
