--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -16,7 +16,7 @@
     src: supervisord.conf.j2
     dest: "{{ supervisor_config_path }}/supervisord.conf"
     mode: 0644
-  notify: restart supervisor
+  notify: Restart supervisord
 
 - name: Ensure Supervisor program configs are present.
   template:
@@ -28,7 +28,7 @@
     mode: 0644
   when: item.state|default('present') != 'absent'
   with_items: "{{ supervisor_programs }}"
-  notify: restart supervisor
+  notify: Reload supervisord config
 
 - name: Ensure Supervisor group configs are present.
   template:
@@ -40,4 +40,4 @@
     mode: 0644
   when: item.state|default('present') != 'absent'
   with_items: "{{ supervisor_groups }}"
-  notify: restart supervisor
+  notify: Reload supervisord config
