--- a/tasks/init-setup.yml
+++ b/tasks/init-setup.yml
@@ -7,7 +7,7 @@
     group: root
     mode: 0755
   when: "ansible_service_mgr != 'systemd'"
-  notify: restart supervisor
+  notify: Restart supervisord
 
 - name: Copy Supervisor unit file into place (for systemd systems).
   template:
@@ -17,4 +17,9 @@
     group: root
     mode: 0644
   when: "ansible_service_mgr == 'systemd'"
-  notify: restart supervisor
+  register: systemd_service
+  notify: Restart supervisord
+
+- name: Reload systemd
+  command: systemctl daemon-reload
+  when: systemd_service.changed and ansible_service_mgr == 'systemd'
